install(FILES 
    SoXtBaseEditor.help.pdf
    SoXtBaseViewer.help.pdf
    SoXtColorEditor.help.pdf
    SoXtDirectionalLightEditor.help.pdf
    SoXtExaminerViewer.help.pdf
    SoXtFlyViewer.help.pdf
    SoXtMaterialEditor.help.pdf
    SoXtPlaneViewer.help.pdf
    SoXtWalkViewer.help.pdf
    DESTINATION ${IVHELPDIR}/Inventor
)
